# extendicare_kg_RAG

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  agents.md  check_remaining.py  cleanup_orphaned.py  count_expansion_files.py  debug_discovery.py  debug_metadata.py  debug_processing.py  detect_changes.py  document_report.html  find_missing.py  generate_html_report.py  kickoff.sh  main.py  process_discovered_simple.py  pyproject.toml  quick_status.py  requirements.txt  sync_and_process.py  test_expanded_script.py  test_file_detection.py  test_single_process.py
configs/: __init__.py  schema_policy.py
data/: file_tracker.db  processing_summary.json  test_processing_summary.json
data/metadata/: admin1-p1001medicalaffairsprocedure_b13cd4d71ed3_metadata.json  admin1-p10medicalaffairspolicy_e4f2ce0594d1_metadata.json  admin1-p2001contractingmedicalservicesprocedure_3e0cc9719202_metadata.json  admin1-p20contractingmedicalservicespolicy_1f9092efaf9d_metadata.json  admin1-p3001medicalservicesandstandardsprocedures_47f83135fe37_metadata.json  admin1-p30medicalservicesandstandardspolicy_6a3b2dd40e76_metadata.json  admin1-p4001medicalservicesevaluationprocedure_edda41b58949_metadata.json  admin1-p40medicalservicesevaluationpolicy_9817f2767aaa_metadata.json  admin1-p5001credentialingprocedure_521a83ab6a40_metadata.json  (+898 more)
scripts/: api.py  chunk_analytics.py  clean_chunk.py  extract_metadata.py  file_tracker.py  file_viewer_app.py  ingest.py  parse.py  process_all_care.py  process_all_categories.py  process_expanded_simple.py  test_care_docs.py  test_rate_limits.py
(+2053 files in other folders)
